--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,66 @@
-.splashScreen { 
-    padding: 120px 60px;
+.bw{
+    height: 800px;
     background-image: url("../img/IMG_9533.JPG");
+    background-color: rgb(50, 50, 50);
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    min-height: 540px;
+}
+
+h1 {
+    font-size: 10rem;
+    line-height: 80%;
+}
+
+h2 {
+    font-size: 3rem;
+    color: black;
+    text-transform: uppercase;
+}
+
+h3 {
+    font-size: 6rem;
+    text-transform: uppercase;
+    color: black;
+}
+
+h4 {
+    font-size: 8rm;
+}
+
+h5{
+    font-size: 2rem;
+}
+
+h1, h5 {
+text-transform: uppercase;
+color: black;
+}
+
+p {
+    font-size: 1.5rem;
+    color: black;
+}
+
+.image {
+    height: 1000px;
+}
+
+.img-fluid {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.fi fi-brands-facebook,
+.fi fi-brands-instagram,
+.fi fi-brands-youtube {
+    width: 40px;
+    height: 40px;
+    margin-right: 40px;
+}
+
+.footer {
+    background-color: black;
+    color: white;
 }
